Rigid Body World Field Weights dont have a proper RNA path (e.g. cannot be animated) #80131

Closed
opened 2020-08-26 11:37:51 +02:00 by Philipp Oeser · 4 comments
Member

System Information
Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-08-25 13:02, hash: b43f4fda19
Worked: never

Short description of error
Rigid Body World Field Weights cannot be animated. They dont have a proper RNA path defined.

Exact steps for others to reproduce the error
rigidbodyworld_field_weights_animate.blend

  • Open file
  • Under Scene > Rigid Body World > Field Weights, try to set a keyframe on any EffectorWeight (e.g. Wind)

Result: no keyframe is created, following message cames up

Failed to resolve path to property, try manually specifying this using a Keying Set instead

This is also why you cannot Copy To Selected, Copy Data Path, Copy As New Driver, etc

With D8713 applied, you can add keyframes to these field weights (e.g. Gravity or Wind) and these are respected correctly in the simulation.

**System Information** Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master (modified), commit date: 2020-08-25 13:02, hash: `b43f4fda19` Worked: never **Short description of error** Rigid Body World Field Weights cannot be animated. They dont have a proper RNA path defined. **Exact steps for others to reproduce the error** [rigidbodyworld_field_weights_animate.blend](https://archive.blender.org/developer/F8811817/rigidbodyworld_field_weights_animate.blend) - Open file - Under `Scene` > `Rigid Body World` > `Field Weights`, try to set a keyframe on any EffectorWeight (e.g. Wind) Result: no keyframe is created, following message cames up ``` Failed to resolve path to property, try manually specifying this using a Keying Set instead ``` This is also why you cannot `Copy To Selected`, `Copy Data Path`, `Copy As New Driver`, etc With [D8713](https://archive.blender.org/developer/D8713) applied, you can add keyframes to these field weights (e.g. Gravity or Wind) and these are respected correctly in the simulation.
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2020-08-26 11:38:23 +02:00
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 627132496d

This issue was referenced by 627132496d18c09a79899a23e3b964da2b9ad080
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:32 +01:00
Sign in to join this conversation.
2 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#80131
No description provided.